<resources>
    <string name="app_name">Outlets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Outlets</string>
    <string name="nav_header_subtitle">Выбери свои скидки</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Акции и скидки</string>
    <string name="menu_newyorker">NewYorker</string>
    <string name="menu_adidas">Adidas</string>
    <string name="men">Мужчины</string>
    <string name="women">Женщины</string>
    <string name="gender_choose">Для кого подобрать одежду?</string>
    <string name="search_string">Поиск</string>
    <string name="Promotions">Акции и скидки</string>
    <string name="menu_bershka">Bershka</string>
    <string name="h_m"><![CDATA[H&M]]></string>
    <string name="filterChooseText">Выберите категории</string>
    <string name="filterButtonText">Применить</string>
    <string name="accessories">Аксессуары</string>
    <string name="jackets">Куртки</string>
    <string name="tshorts">Футболки, свитера</string>
    <string name="clear_filter">Сбросить фильтры</string>
    <string name="jacketsCategory">Куртки, пальто</string>
    <string name="shortsCategory">Футболки, рубашки</string>
    <string name="sweeterCategory">Кофты, пиджаки</string>
    <string name="pantsCategory">Штаны, брюки, джинсы</string>
    <string name="dressCategory">Платья, юбки</string>
    <string name="clothesCategory">Обувь</string>
    <string name="underwearCategory">Нижнее белье</string>
    <string name="accessoriesCategory">Аксессуары</string>
    <string name="othersCategory">Другое</string>
    <string name="clothingCategory">Товары без категории</string>
    <string name="open_close_filter_field">Open/close filter field</string>
</resources>