<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#444444"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_discount"
            android:title="@string/Promotions" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_nyer"
            android:title="@string/menu_newyorker" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_adidas"
            android:title="@string/menu_adidas"
            android:textSize="20sp"/>
        <item
            android:id="@+id/nav_bershka"
            android:icon="@drawable/ic_bershka"
            android:title="@string/menu_bershka"
            android:textSize="20sp"/>
        <item
            android:id="@+id/nav_HM"
            android:icon="@drawable/ic_h_m"
            android:title="@string/h_m"
            android:textSize="20sp"/>
    </group>
</menu>