<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.outlet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.outlet.ui.shopfragments.NewYorkerFragment"
        android:label="@string/menu_newyorker"
        tools:layout="@layout/fragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.outlet.ui.shopfragments.AdidasFragment"
        android:label="@string/menu_adidas"
        tools:layout="@layout/fragment" />
    <fragment
        android:id="@+id/nav_HM"
        android:name="com.example.outlet.ui.shopfragments.HMFragment"
        android:label="@string/h_m"
        tools:layout="@layout/fragment" />
    <fragment
        android:id="@+id/nav_bershka"
        android:name="com.example.outlet.ui.shopfragments.BershkaFragment"
        android:label="@string/menu_bershka"
        tools:layout="@layout/fragment" />
</navigation>