<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.AdidasFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnFemale"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/women"
        app:layout_constraintEnd_toStartOf="@+id/btnMale"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="1dp" />

    <Button
        android:id="@+id/btnMale"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/men"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFemale"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFemale"
        tools:layout_editor_absoluteX="149dp" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_choose"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:paddingEnd="16dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="3dp">

            <ImageView
                android:id="@+id/search_bar_hint_icon"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:src="@drawable/ic_nyer_white"/>

            <EditText
                android:id="@+id/search_bar_edit_text"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:backgroundTint="@color/black"
                android:hint="@string/search_string"
                android:imeOptions="actionSearch"
                android:inputType="textCapWords"
                android:paddingLeft="15dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="20dp"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>
